assets/css/articles.scss
// $articles-description-height: 70px;
$articles-description-height: 90px;
$featured-title-size: 1.4em;
$tag-container-size: 35px;
$info-box-brightness: 50%;
$article-card-hover-brightness: 30%;


.featured-article{
	& p{
		// text-wrap: stable;
	}
	// flex-direction: column;
	// margin-left: 0px;
	// padding-left: 0px;
	// width: 70%;
	// display: block;
	// text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px var(--hover-color), 0 0 40px var(--hover-color), 0 0 50px var(--hover-color), 0 0 60px var(--hover-color), 0 0 70px var(--hover-color);
	border: 2px 10px solid $main_color;
	padding: .5em 1em;
	// background-color: pink;
	border-radius: 3px 3px 3px 3px;
	-webkit-border-radius: 3px 3px 3px 3px;
	-moz-border-radius: 3px 3px 3px 3px;
	border-left: 5px solid $soft_color;

	box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
	transition: box-shadow .2s;
	height: fit-content;
	& time{
		color: var(--text-2);
		// height: 100%;
		// display: inline-block;
		// position: absolute;
			// height: 30px;
		// margin-top: auto;
		// bottom: 0px;
	}
	&:hover{
		border-left: 5px solid $main_color;
		box-shadow: rgba(0, 0, 0, 0.35) 1.95px 4px 5.6px;

		// @extend .bloom-shadow;
		// color: $main_color;

		& .hover-underline-animation::after {
			transform: scaleX(1);
			transform-origin: bottom left;
		  }
	}
}


.featured-article-big{

	// position: inherit;
	overflow: hidden;
	position: relative;
	width: 100%;
	height: 100%;
	// height: 50%;
	// width: 300px;
	// height: 300px;
	// flex-direction: column;
	// margin-left: 0px;
	// padding-left: 0px;
	// width: 70%;
	// display: block;
	// text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px var(--hover-color), 0 0 40px var(--hover-color), 0 0 50px var(--hover-color), 0 0 60px var(--hover-color), 0 0 70px var(--hover-color);
	border: 2px 10px solid $main_color;
	// padding: .5em 1em;
	// background-color: pink;
	border-radius: 3px 3px 3px 3px;
	// border-radius: 10px 10px 0 0;

	-webkit-border-radius: 3px 3px 3px 3px;
	-moz-border-radius: 3px 3px 3px 3px;
	// border-left: 5px solid $soft_color;
	// border-bottom: 5px solid $soft_color;

	// box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
	box-shadow: rgba(0, 0, 0, 0.74) 0px 3px 8px;
	// box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;

	transition: box-shadow .2s;
	transition-duration: .7s;
	// transition: transform 1.4s;
	transition: transform .6s;

	max-height: 350px;
	aspect-ratio: 2/2.5;


	.reading-time{
		// color: pink;
		// color: transparent;
		position: absolute;
		z-index: 1;
		font-weight: 900;
		// right: 0px;
		// top: -20px;
		padding: 6px 7px;
		top:0px;
		left:0px;
		transition-duration: .4s;
		height: 30px;
		// transform: translateY(calc(var(--is-article-hovered, 0) * -59px));
		transform: translateY(calc((1 - var(--is-article-hovered, 0)) * -59px));
		opacity: calc(var(--is-article-hovered, 0) * 1.0);
		// transform: translateY(59px);
		svg, p, span {
			display: inline-block;
			color: var(--text-2-dark);
			// display: flex;
			// color: red;
		}
	}

	// height: fit-content;
	& time{
		color: var(--text-2);
		z-index: 1;
		// height: 100%;
		// display: inline-block;
		// position: absolute;
			// height: 30px;
		// margin-top: auto;
		// bottom: 0px;
	}

	// & img{
	// 	position: relative;
    //     // width: 250px;
    //     // height: 300px;
    //     overflow: hidden;
	// 	transition: all 0.6s;
	// 	&:hover{
	// 		filter: blur(10px);
	// 	}
	// }


	&:hover{
		--is-article-hovered: 1;
		--article-brightness: 100%;
		// border-left: 5px solid $main_color;
		// border-bottom: 5px solid $main_color;
		// box-shadow: rgba(0, 0, 0, 0.35) 1.95px 4px 5.6px;
		// box-shadow: rgba(0, 0, 0, 0.94) 0px 3px 10px;
		box-shadow: rgba(0, 0, 0, 0.94) 0px 5px 10px;

		transition-duration: .2s;

		// filter: blur(5px);

		// @extend .bloom-shadow;
		// color: $main_color;

		transform: rotateZ(var(--rand-rotation, 0));
		transition: transform .4s;
		& .image-container {
			filter: brightness(#{$article-card-hover-brightness}) blur(3px);
		}

		& .hover-underline-animation::after {
			transform: scaleX(1);
			transform-origin: bottom left;
		  }
	}


	& .image-container {
		overflow: hidden;
		transition-duration: 1s;

		width: 100%;
		height: 100%;
		
	}
	& .image-container img{
		transition: all .4s;
		// overflow: hidden;
		width: 100%;
		height: 100%;
		// height: 100px;
		// background-color: red;
		object-fit: cover;
		// object-fit: fill;

		&:hover{
			// transform: scale(1.5);
			transform: scale(1.0);
		}
	}

	& .article-info{
		// background-color: pink;
		// background-color: rgba(59, 59, 59, 0.637);
		// overflow: hidden;
		overflow: visible;
		position: absolute;
		// bottom: 0;
		width: 100%;
		// height: 100%;
		// top: 0;
		// bottom: 0%;
		bottom: calc(var(--is-article-hovered, 0) * #{$tag-container-size});
		// top: 50%;
  		// left: 50%;
		// top: 0;
		// z-index: 1;
		// filter: blur(10px);
		// backdrop-filter: blur(2px);
		// backdrop-filter: blur(2px)  brightness(57%);
		backdrop-filter: blur(2px)
				//  brightness(calc(var(--is-article-hovered, 0) * 57%));
				//  brightness(calc(100% - (1 - (var(--is-article-hovered, 0)) * 40%)));
				 brightness(var(--article-brightness, #{$info-box-brightness}));
				//  brightness(calc(100% - 40%));
		// opacity: calc((1 - var(--is-article-hovered, 0) * 1));
		transition: all .3s;

		// transform: translateY(calc(30px*(1-var(--is-article-hovered, 0))));
		// transform: translateY(calc(30px*(1-var(--is-article-hovered, 0))));
		// transform: translateY(calc((1 - var(--is-article-hovered, 0))*70px));
		// transform: translateY(calc((1 - var(--is-article-hovered, 0)) * (#{$articles-description-height} + #{$featured-title-size})  ));
		// transform: translateY(calc((1 - var(--is-article-hovered, 0)) * (#{$articles-description-height}  )));
		transform: translateY(calc((1 - var(--is-article-hovered, 0)) * (#{$articles-description-height}  )));
		// transform: translateY(calc((1 - var(--is-article-hovered, 0)) * (#{$articles-description-height} + #{$tag-container-size} )));
		// transform: translateY(calc(var(--is-article-hovered, 0)*30px));
		// transform: translateY(calc((1 - var(--is-article-hovered, 0)) * 30px));

		// transform: translateY(calc(2*30px));
		.title{
			// background-color: red;
			// color: red;
			left: 0px;
			text-align: left;
			// margin: 20px 10px;
			margin: 10px 10px;
			font-size: $featured-title-size;
		}

		.description{
			// color: pink;
			height: $articles-description-height;
			// text-overflow: ellipsis;
			// white-space: nowrap;
			// visibility: hidden;
			// display: none;
			overflow: hidden;
			display: -webkit-box;
			-webkit-line-clamp: 3; /* Adjust based on line height */
			-webkit-box-orient: vertical;
		}


	}

	.tag-container{
		// display: inline-block;
		// width: 100%;
		// height: 100%;
		// background-color: pink;
		position: absolute;
		// position: relative;
		// height: 50px;
		height: #{$tag-container-size};
		// width: 100%;
		padding-left: 10px;
		// z-index: 2;
		// top: 0px;
		// top: 50%;
		// bottom: 150px;
		// bottom: -40px;
		bottom: 0px;
		a {
			color: var(--text-2-dark);
			// border-color: var(--text-2-dark) !important;
			// border-color: var(--border-dark) !important;
			border-color: var(--border-dark);
			// border-color: red !important;
			&:hover{
				border-color: var(--hover-color) !important;
				color: var(--hover-color) !important;
				
			}
		}

		span {
			position: relative;
			// background-color: red;
			display: inline-block;
		}
		
		.featured-tag{
			font-size: 0.78em;
			margin-right: 3px;
			transition-delay: var(--transition-delay, 0s);
			transition-property: transform;
			// position: absolute;
			// bottom: -20px;
			// left: 0px;
			// background-color: pink;
			transform: translateY(calc(var(--is-article-hovered, 0) * -100px + 100px));
		}
	}

	// & article .article-time-box{
	// article .article-time-box{
	.article-time-box{
		background-color: var(--hover-color);
		// background-color: rgba(var(--hover-color), 100);
		backdrop-filter: blur(7px);
		// overflow: visible;
		// color: pink;
		display: block;
		// width: 30%;
		padding: .8em;
		position: absolute;
		// top: 0;
		// right: 0;
		// transition: transform .3s ease-out;
		// transition: transform .3s cubic-bezier(0,1.95,1,.39);
		// transition: transform .3s cubic-bezier(0,1.95,1,1.2);
		// transition: transform .3s cubic-bezier(.6,.23,.72,1.45);
		// https://cubic-bezier.com/#.25,1.5,.46,.95
		// transition: transform .6s cubic-bezier(.25,1.5,.46,.95);
		// transition: transform .6s cubic-bezier(.25,1.5,.17,.69);
		// transition: transform .4s ease-in-out;
		transition: all .4s ease-in-out;
		transform: translateY(calc((1 - var(--is-article-hovered, 0))*-8em));

		// transition-duration: 10s;
		opacity: calc(var(--is-article-hovered, 0) * 1.0);

		top: 0%;
		right: 0%;
		// border-radius: 0% 100% 0% 100% / 69% 0% 100% 31% ;
		// height: 100%;
		h1,h2,h3{
			color: var(--text-1-dark);
		}
		h1{
			font-size: 1.5em;
			// color:red;
		}
		h3{
			font-size: 1em;
		}
	}

	.article-time-simple{
		position: absolute;
		top: 0px;
		right: 0px;
		padding: 6px 7px;
		font-weight: 900;
		// h1{
		// 	font-size: 1.0em;
		// }

		// transform: translateY(calc((1 - var(--is-article-hovered, 0))*-8em));
		// opacity: calc(var(--is-article-hovered, 0) * 1.0);
		transform: translateY(calc((1 - var(--is-article-hovered, 0)) * -59px));
		opacity: calc(var(--is-article-hovered, 0) * 1.0);

		transition-duration: .4s;
	}
}


.featured-articles-container{
	display: flex;
	flex-direction: column;
	// align-items: end;
	& h2{
		font-size: 2em;
	}
	& h3{
		font-size: 1.2em;
		font-weight: bold;
	}
}

.featured-articles-container section{
	display: grid;
	grid-template-columns: repeat(1, minmax(0, 1fr));
	gap: 2rem 1.5rem;
	max-width: 1280px;
  
	@media (min-width: 640px) {
	  grid-template-columns: repeat(2, minmax(0, 1fr));
	  row-gap: 3rem;
	}
  
	@media (min-width: 1024px) {
	  grid-template-columns: repeat(3, minmax(0, 1fr));
	}
  }


article.articles-content{
	@extend hgroup;
}

